# sketcher

./: .clang-format  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierrc  .reviewboardrc  .style.yapf  BUILD.md  CMakeLists.txt  LICENSE  MONOMER_COORDGEN_GALLERY_SETUP.md  README.md  dependencies.json  premake  pytest.ini  schrodinger_build.py  sketcher-precommit.py  version.json  versions.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/actions/activate-emsdk/: action.yml
.github/actions/activate-msvc/: action.yml
.github/actions/build-external/: action.yml
.github/actions/build_dependency_action/: action.yml
.github/actions/build_library_action/: action.yml
.github/actions/bump-version/: action.yml  bump_version.py
.github/actions/checkout-and-configure-git/: action.yml
.github/actions/generate-helm-gallery/: action.yml
.github/actions/prepare_jobs_action/: action.yml
.github/actions/publish-npm-package/: action.yml
.github/scripts/: generate_helm_gallery.mjs
.github/workflows/: 2025-4.yml  build_sketcher.yml  example-build.yml  monomer-image-gallery.yml  nightly-build.yml  release.yml  sketcher-builder.yml  sketcher_builder.yml  test-monomer-coordgen.yml  update-wasm-snapshots.yml
data/: core_monomerlib.db
dependencies/: build_boost.sh  build_coordgenlibs.sh  build_fmt.sh  build_maeparser.sh  build_qt6.sh  build_rdkit.sh  build_sketcher.sh  build_zlib.sh  darwin_environment.yml  dependencies.json  environment.yml  rdk_static_libs_only.patch  win32_environment.yml
include/schrodinger/rdkit_extensions/: capture_rdkit_log.h  coarse_grain.h  convert.h  coord_utils.h  definitions.h  dummy_atom.h  example.h  file_format.h  file_stream.h  helm.h  molops.h  monomer_database.h  monomer_mol.h  rgroup.h  sgroup.h  stereochemistry.h  variable_attachment_bond.h
include/schrodinger/sketcher/: definitions.h  example.h  example_widget.h  image_constants.h  image_generation.h  public_constants.h  sketcher_widget.h  version.h.in
new_sketcher/: pyproject.toml  sketcher.py
scripts/: generate_helm_gallery.py
src/: helm_to_svg.cpp
src/app/: README.md  crash_handler.cpp  crash_handler.h  image_generation_from_js.cpp  image_generation_from_js.h  main.cpp  sketcher.icns  sketcher.rc
src/schrodinger/rdkit_extensions/: atomistic_conversions.h  atomistic_to_cg.cpp  atomistic_to_cg.h  biologics_fingerprint.cpp  biologics_fingerprint.h  capture_rdkit_log.cpp  cg_conversions.h  cg_monomer_database.cpp  cg_monomer_database.h  cg_to_atomistic.cpp  coarse_grain.cpp  constants.h  convert.cpp  coord_utils.cpp  default_monomer_definitions.json  dummy_atom.cpp  example.cpp  file_format.cpp  file_stream.cpp  generate_default_monomers_header.py  molops.cpp  monomer_database.cpp  monomer_database.h  monomer_db_schema.h  monomer_directions.cpp  monomer_directions.h  monomer_mol.cpp  monomer_utils.cpp  monomer_utils.h  polymer_group.h  rgroup.cpp  sgroup.cpp  stereochemistry.cpp  sup_utils.cpp  sup_utils.h  to_atomistic.cpp  to_monomeric.cpp  variable_attachment_bond.cpp
src/schrodinger/sketcher/: example.cpp  example_widget.cpp  font_loader.cpp  font_loader.h  image_generation.cpp  numeric_label_validator.cpp  numeric_label_validator.h  sketcher.qrc  sketcher_css_style.h  sketcher_widget.cpp
src/utils/: smiles_to_helm.cpp
src/wasm/: main.cpp  sketcher.qrc  sketcher_wasm.cpp
src/wasm/resources/: wasm_stylesheet.qss
test/: requirements.txt  test_dependency_versions.py  valgrind_Qt_pf_suppressions.Linux-x86_64  valgrind_Qt_runner_suppressions.Linux-x86_64  valgrind_TestWidgetFixture_suppressions.Linux-x86_64
test/github_actions/: test_bump_version.py
test/python/: X1.db  X1.json  test_smiles_to_helm.py
test/schrodinger/rdkit_extensions/: fasta_examples.h  helm_examples.h  test_biologics_fingerprint.cpp  test_capture.cpp  test_cg_coordgen.cpp  test_coarse_grain.cpp  test_common.h  test_conversions.cpp  test_convert.cpp  test_coord_utils.cpp  test_example.cpp  test_fasta_to_rdkit.cpp  test_file_format.cpp  test_file_stream.cpp  test_helm_parsing.cpp  test_helm_polymer_groups.cpp  test_helm_string_util.cpp  test_helm_to_rdkit.cpp  test_helm_utils.cpp  test_molops.cpp  test_monomer_coordgen.cpp  test_monomer_database.cpp  test_monomer_mol.cpp  test_rdkit_to_fasta.cpp  test_rdkit_to_helm.cpp  test_sgroup.cpp  test_stereochemistry.cpp  test_valgrind.suppressions  test_variable_attachment_bond.cpp  test_wiggly_bond_rdkit_behaviors.cpp
test/schrodinger/sketcher/: qapplication_required_fixture.h  test_common.h  test_example.cpp  test_example_widget.cpp  test_image_generation.cpp  test_numeric_label_validator.cpp  test_sketcher_widget.cpp
test/schrodinger/test/: checkexceptionmsg.h  fixtures.h  scopedenv.h
test/testfiles/: 1STC_ligand.maegz  1fjs_lig.mae  1stc.mae  SKETCH_1003.rxn  X1.json  allSmiles.smi  methane.sdf  methane.smigz  pretty.smi  rxn_aryl.rxn  shared_11152.mae  shared_8381.sdf  sketch_1170.sdf  sketch_1447.sdf  sketch_1651.sdf  sketch_1721.sdf  sketch_1727.sdf  sup_groups.sdf
test/testfiles/autodetect/: text-FASTA-PEPTIDE.txt  text-MAESTRO.txt
test/testfiles/helm-gallery/: bicyclic_peptides.csv  chembl21_1k.csv  mixed_branch_peptides.csv  original_test_data.csv  validation_set.csv
test/testfiles/rdkit_extensions/: methane.mae  methane.mae.zst  methane.maegz  methane.mol2  methane.sdfgz  methane.smi
test/testfiles/sketcher/: 1STC_receptor.maegz  4x6h.maegz  CRDGEN217.mae  lid_575.mae  reaction.rxn  reaction_smarts.rsmi  rxn_no_r_group.rxn  rxn_r_group.rxn  sketch_1159.sdf  sketch_1211.sdf  sketch_1383.mae  sketch_1396.sdf  sketch_1660.mae  sketch_1674.sdf  sketch_1727.sdf  structure_1.sdf
test/wasm/: .gitignore  conftest.py  e2e_helpers.js  package.json  playwright.config.js  test_wasm_api.py  wasm_api.test.js  wasm_e2e.test.js
test/wasm/e2e/: analog.test.js  drawing.test.js  e2e_helpers.js  import.test.js  (+7 more)
test_data/: original_test_data.csv
wasm/: create_wasm_tarball.sh  update_cache_bust.py
wasm/package/: .npmrc  package-lock.json  package.json  rollup.config.js  tsconfig.json
wasm/public/: wasm_shell.html
(+474 files in other folders)
